aks-deployment/essedum-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: essedum-api-ingress
  namespace: aipns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${INGRESS_HOST}
    secretName: essedum-secret
  rules:
  - host: ${INGRESS_HOST}
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: essedum-backend-api-gateway-service
            port:
              number: 8080
